# SolarPower-Transformer-Forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
data/processed/: campus_scale.txt
docs/figures/: README.md
scripts/: run_pipeline.sh
src/: __init__.py  constants.py  dataset.py  evaluate.py  losses.py  model.py  phase2b_trainer.py  scaling.py  utils.py
src/solar_forecasting/: dataset.py  evaluation.py  losses.py  model.py  scaling.py  utils.py
src/solar_forecasting/training/: __init__.py  phase1.py  phase2a.py  phase2b.py  phase2b_trainer.py  phase3.py
src/train/: __init__.py  phase1_teacher_forcing.py  phase2a_semi_autoregressive.py  phase2b_scheduled_sampling.py  phase3_autoregressive_finetune.py
tests/: test_model.py
